ax2xx new found 1. after make install, if no reboot, need modprobe -r iwlwifi ath9k cfg80211 and pkill wpa_supplicant(or conn by hand) 2. common no csi wide_id(8,fa/fb), need a sw err, eg. cat mem, then get csi wide_id 3. but csi_portid == 0, so no send nlmsg to userspace app, undone 4. enable csi is by echo 1 > csi_enabled 5. if iwlwifi err loop in login, then delete /lib/module/x/updates in recover mode root mode next: research why csi_portid == 0

--- a/ax2xx/test/Makefile
+++ b/ax2xx/test/Makefile
@@ -1,4 +1,4 @@
 all:
-	gcc test.c -o test $(pkgconf --cflags --libs libnl-genl-3.0)
+	gcc test.c -o test $(shell pkgconf --cflags --libs libnl-genl-3.0)
 clean:
 	rm -f *.o test
