--- a/csist/iaxcsi/cpp/Makefile
+++ b/csist/iaxcsi/cpp/Makefile
@@ -1,5 +1,9 @@
+CXX?=g++ 
+CXXFLAGS=-std=c++14 -g -Wall -Wextra #-Werror -Wpedantic 
+
+.PHONY: all clean
 all:
-	g++ -g iaxcsi.cpp -std=c++14 -o iaxcsi -lpthread \
+	$(CXX) iaxcsi.cpp -o iaxcsi $(CXXFLAGS) -lpthread \
 		$(shell pkg-config --cflags --libs libnl-genl-3.0)
 clean:
 	rm -f *.o iaxcsi
